--- a/index.html
+++ b/index.html
@@ -1,34 +1,75 @@
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const form = document.getElementById("mulletForm");
-  const result = document.getElementById("result");
-
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    result.innerHTML = "<p>Uploading... please wait 10–20 seconds for your glorious mullet!</p>";
-
-    const formData = new FormData(form);
-
-    try {
-      const res = await fetch("https://n8n-service-25-11-25.onrender.com/webhook/mulletify-public", {
-        method: "POST",
-        body: formData
-      });
-
-      if (!res.ok) throw new Error(`Upload failed: ${res.status}`);
-
-      const blob = await res.blob();
-      const imgUrl = URL.createObjectURL(blob);
-
-      result.innerHTML = `
-        <h2>Your Mulletified Image:</h2>
-        <img src="${imgUrl}" alt="Mulletified Image" style="max-width:90%;border-radius:8px;box-shadow:0 0 10px rgba(0,0,0,0.2);" />
-      `;
-    } catch (err) {
-      console.error(err);
-      result.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mulletify Yourself!</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 40px;
+      background: #fafafa;
     }
-  });
-});
-</script>
+    h1 { color: #d62828; }
+    form { margin-top: 20px; }
+    input, button {
+      margin: 10px;
+      padding: 10px;
+      font-size: 1rem;
+    }
+    img {
+      margin-top: 30px;
+      max-width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Get Mulletified 💇‍♂️</h1>
+  <p>Upload your photo and see your new mullet appear!</p>
+
+  <form id="mulletForm">
+    <input type="file" id="image" name="image" accept="image/*" required><br>
+    <button type="submit">Upload & Get Mullet</button>
+  </form>
+
+  <div id="result"></div>
+
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const form = document.getElementById("mulletForm");
+      const result = document.getElementById("result");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        result.innerHTML = "<p>Uploading... please wait 10–20 seconds for your glorious mullet!</p>";
+
+        const formData = new FormData(form);
+
+        try {
+          const res = await fetch("https://n8n-service-25-11-25.onrender.com/webhook/mulletify-public", {
+            method: "POST",
+            body: formData
+          });
+
+          if (!res.ok) throw new Error(`Upload failed: ${res.status}`);
+
+          const blob = await res.blob();
+          const imgUrl = URL.createObjectURL(blob);
+
+          result.innerHTML = `
+            <h2>Your Mulletified Image:</h2>
+            <img src="${imgUrl}" alt="Mulletified Image" />
+          `;
+        } catch (err) {
+          console.error(err);
+          result.innerHTML = `<p style="color:red;">Error: ${err.message}</p>`;
+        }
+      });
+    });
+  </script>
+</body>
+</html>
